--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - run: npm install
     - run: |
        node build.js
-       echo "mikeal.link" > CNAME
+       echo "mikeal.link" > ./dist/CNAME
 
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.6.3
