--- a/.github/workflows/create-shortlink.yml
+++ b/.github/workflows/create-shortlink.yml
@@ -13,7 +13,7 @@ on:
         description: 'The short-url to use in the shortlink (OPTIONAL)'
         type: string
 jobs:
-  Get_OIDC_ID_token:
+  get_OIDC_ID_token:
     name: Get OIDC Token from GCP
     runs-on: ubuntu-latest
     steps:
@@ -27,10 +27,12 @@ jobs:
     - id: 'gcloud'
       name: 'gcloud'
       run: |-
-        gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}"
+        gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}" --project=the-static-zone
         gcloud services list
   create-shortlink:
+    name: Create Shortlink
     runs-on: ubuntu-latest
+    needs: get_OIDC_ID_token
     steps:
     - name: Check out source
       uses: actions/checkout@v2
